--- a/desafios/d08/desafio008-amarela.html
+++ b/desafios/d08/desafio008-amarela.html
@@ -17,7 +17,7 @@
     <h1>Página amarela</h1>
     <p>Você agora está na página amarela. Você acessou clicando no segundo link da página principal.</p>
     <ul>
-        <li><a href="desafio008-navegacoes.html">Voltar para a página cinza.</a></li>
+        <li><a href="desafio008-navegacoes.html" rel="prev">Voltar para a página cinza.</a></li>
     </ul>
 </body>
 </html>
