--- a/desafios/d08/desafio008-verde.html
+++ b/desafios/d08/desafio008-verde.html
@@ -17,7 +17,7 @@
     <h1>Página verde</h1>
     <p>Você agora está na página verde. Você acessou clicando no primeiro link da página principal.</p>
     <ul>
-        <li><a href="desafio008-navegacoes.html">Voltar para a página cinza</a></li>
+        <li><a href="desafio008-navegacoes.html" rel="prev">Voltar para a página cinza</a></li>
     </ul>
     
 </body>
