--- a/desafios/d02/desafio002.html
+++ b/desafios/d02/desafio002.html
@@ -10,6 +10,6 @@
 <body>
     <h1>Desafio das Imagens</h1>
     <p>Inserir imagens em HTML é muito simples, tanto no conteúdo quanto lá em cima, como ícone de favoritos!</p>
-    <img src="imagens/github-m.png" alt="Guanabara">
+    <img src="imagens/github-m.png" alt="Github">
 </body>
 </html>
