--- a/desafios/d05/desafio005.html
+++ b/desafios/d05/desafio005.html
@@ -16,15 +16,15 @@
     <h2>Como falar comigo?</h2>
     <ul>
         <li><img src="Imagens/inta.png" alt="Logo instagram">
-            <a href="https://www.instagram.com/fabianob09/" target="blank" >/fabianob09</a>
+            <a href="https://www.instagram.com/fabianob09/" target="_blank" >/fabianob09</a>
         </li>
         <li>
             <img src="Imagens/face.png" alt="Logo face">
-            <a href="https://www.facebook.com/fabiano.braga.908/" target="blank">/fabiano.braga.908</a>
+            <a href="https://www.facebook.com/fabiano.braga.908/" target="_blank">/fabiano.braga.908</a>
         </li>
         <li>
             <img src="Imagens/inkdin.png" alt="Logo linkdin">
-            <a href="https://www.linkedin.com/in/fabiano-matheus-57a378215/" target="blank">/fabiano-matheus-57a378215</a>
+            <a href="https://www.linkedin.com/in/fabiano-matheus-57a378215/" target="_blank">/fabiano-matheus-57a378215</a>
         </li>
     </ul>
     
