--- a/desafios/d08/desafio008-navegacoes.html
+++ b/desafios/d08/desafio008-navegacoes.html
@@ -15,8 +15,8 @@
     <h1>Desafio da Navegação</h1>
     <p>Esta é a página principal, o índice do seu site. É a página cinza. A partir dela você pode acessar as outras áreas principais através dos links a seguir:</p>
     <ul>
-        <li><a href="desafio008-verde.html">Acessar a área verde</a></li>
-        <li><a href="desafio008-amarela.html">Acessar a área amarela</a></li>
+        <li><a href="desafio008-verde.html" rel="next">Acessar a área verde</a></li>
+        <li><a href="desafio008-amarela.html" rel="next">Acessar a área amarela</a></li>
     </ul>
     
 </body>
