Desafio do zero

--- a/desafios/d010/projeto-android.html
+++ b/desafios/d010/projeto-android.html
@@ -10,6 +10,8 @@
   
 </head>
 <body>
+    <!--PROJETO EM ANDAMENTO!-->
+    
     <header>
         <h1>Curiosidades de Tecnologias</h1>
         <p>Tudo aquilo que você sempre quissaber sobre o mundo tech, em um único lugar.</p>
