--- a/desafios/d10/index.html
+++ b/desafios/d10/index.html
@@ -118,7 +118,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/Fabiano-Braga" target="_blank" >Fabiano Braga</a> para o desafio.</p>
+        <p>Site criado por <a href="https://github.com/Fabiano-Braga" target="_blank" >Fabiano Braga</a>.</p>
     </footer>
     
 </body>
