--- a/desafios/index.html
+++ b/desafios/index.html
@@ -8,45 +8,45 @@
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Exercícios de HTML e CSS</h1>
-    </header>
     <main>
+        <h1>Exercícios de HTML e CSS</h1>
         <h2>Nível básico</h2>
         <ul>
             <li>
-                <a href="d01/index.html">EX01:</a> Desafio das mensagens
+                <a href="d01/index.html"><strong>EX01:</strong></a> Desafio das mensagens
             </li>
             <li>
-                <a href="d02/desafio002.html">EX02:</a> Desafio das imagens
+                <a href="d02/desafio002.html"><strong>EX02:</strong></a> Desafio das imagens
             </li>
             <li>
-                <a href="d03/desafio003.html">EX03:</a> Desafio do mapa (sem responsividade)
+                <a href="d03/desafio003.html"><strong>EX03:</strong></a> Desafio do mapa (sem responsividade)
             </li>
             <li>
-                <a href="d04/desafio004.html">EX04:</a> Desafio dos emojis
+                <a href="d04/desafio004.html"><strong>EX04:</strong></a> Desafio dos emojis
             </li>
             <li>
-                <a href="d05/desafio005.html">EX05:</a> Desafio minhas redes sociais
+                <a href="d05/desafio005.html"><strong>EX05:</strong></a> Desafio minhas redes sociais
             </li>
             <li>
-                <a href="d06/desafio006.html">EX06:</a> Desafio da tag  &lt;abbr&gt;
+                <a href="d06/desafio006.html"><strong>EX06:</strong></a> Desafio da tag  &lt;abbr&gt;
             </li>
             <li>
-                <a href="d07/desafio007-imagens-flexiveis.html">EX07:</a> Desafio imagens flexíveis 
+                <a href="d07/desafio007-imagens-flexiveis.html"><strong>EX07:</strong></a> Desafio imagens flexíveis 
             </li>
             <li>
-                <a href="d08/desafio008-navegacoes.html">EX08:</a> Desafio navegações entre páginas
+                <a href="d08/desafio008-navegacoes.html"><strong>EX08:</strong></a> Desafio navegações entre páginas
             </li>
             <li>
-                <a href="d09/index.html">EX09:</a> Desafio da tag âncora
+                <a href="d09/index.html"><strong>EX09:</strong></a> Desafio da tag âncora
             </li>
 
             <li>
-                <a href="d10/index.html">EX10:</a> Desafio final - Juntando todo conhecimento
+                <a href="d10/index.html"><strong>EX10:</strong></a> Desafio final - Juntando todo conhecimento
             </li>
 
         </ul>
+
+        <h2> Nível intermediário</h2>
 
     </main>
     
