--- a/desafios/index.html
+++ b/desafios/index.html
@@ -43,6 +43,9 @@
             <li>
                 <a href="d10/index.html"><strong>EX10:</strong></a> Desafio final - Juntando todo conhecimento
             </li>
+            <li>
+                <a href=""></a>
+            </li>
 
         </ul>
 
