--- a/desafios/index.html
+++ b/desafios/index.html
@@ -44,7 +44,7 @@
                 <a href="d10/index.html"><strong>EX10:</strong></a> Desafio final - Juntando todo conhecimento
             </li>
             <li>
-                <a href=""></a>
+                <a href="d011/index.html"><strong>EX11:</strong></a> Desafio imagem de fundo e posicionamento de container.
             </li>
 
         </ul>
