Desafio finalizado do curso em video.

--- a/desafios/d09/index.html
+++ b/desafios/d09/index.html
@@ -6,17 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="Imagens/favicon.ico" type="image/x-icon">
     <title>Meus Vídeos</title>
-    <style>
-        body{
-            background-color: black;
-            color: aliceblue;
-            text-align: center;
-        }
-        h1{
-            text-align: center;
-           
-        }
-    </style>
+    <link rel="stylesheet" href="estilo/d09.css">
 </head>
 <body>
     <!-- Inserindo uma imagem e ao clicar na imagem, o usuário é direcionado para um link do curso em vídeo-->
