--- a/desafios/d09/index.html
+++ b/desafios/d09/index.html
@@ -11,11 +11,11 @@
 <body>
     <!-- Inserindo uma imagem e ao clicar na imagem, o usuário é direcionado para um link do curso em vídeo-->
     <h1>Vídeos legais para assistir</h1>
-    <a href="https://www.youtube.com/watch?v=epDCjksKMok&list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o" target="_blank"><img src="Imagens/thumb-html.png" alt="video html"></a> 
+    <a href="https://www.youtube.com/watch?v=epDCjksKMok&list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o" target="_blank"><img src="imagens/thumb-html.png" alt="video html"></a> 
     
-    <a href="https://www.youtube.com/watch?v=1-w1RfGIov4&list=PLHz_AreHm4dlsK3Nr9GVvXCbpQyHQl1o1" target="_blank"><img src="Imagens/thumb-js.png" alt="video JS"></a><br>
+    <a href="https://www.youtube.com/watch?v=1-w1RfGIov4&list=PLHz_AreHm4dlsK3Nr9GVvXCbpQyHQl1o1" target="_blank"><img src="imagens/thumb-js.png" alt="video JS"></a><br>
 
-    <a href="https://www.youtube.com/watch?v=S9uPNppGsGo&list=PLvE-ZAFRgX8hnECDn1v9HNTI71veL3oW0" target="_blank"><img src="Imagens/thumb-python.png" alt="Vídeo paython"></a> 
+    <a href="https://www.youtube.com/watch?v=S9uPNppGsGo&list=PLvE-ZAFRgX8hnECDn1v9HNTI71veL3oW0" target="_blank"><img src="imagens/thumb-python.png" alt="Vídeo paython"></a> 
 
     <a href="https://www.youtube.com/watch?v=iT6E92Kt38o&list=PLHz_AreHm4dn1JHgN9wpbIUhzZmycYQXW" target="_blank"><img src="Imagens/thumb-hardware.png" alt="Vídeo hardware"></a>
     
