--- a/desafios/d09/index.html
+++ b/desafios/d09/index.html
@@ -17,7 +17,7 @@
 
     <a href="https://www.youtube.com/watch?v=S9uPNppGsGo&list=PLvE-ZAFRgX8hnECDn1v9HNTI71veL3oW0" target="_blank"><img src="imagens/thumb-python.png" alt="Vídeo paython"></a> 
 
-    <a href="https://www.youtube.com/watch?v=iT6E92Kt38o&list=PLHz_AreHm4dn1JHgN9wpbIUhzZmycYQXW" target="_blank"><img src="Imagens/thumb-hardware.png" alt="Vídeo hardware"></a>
+    <a href="https://www.youtube.com/watch?v=iT6E92Kt38o&list=PLHz_AreHm4dn1JHgN9wpbIUhzZmycYQXW" target="_blank"><img src="imagens/thumb-hardware.png" alt="Vídeo hardware"></a>
     
     <a href=""></a>
 </body>
