--- a/desafios/index.html
+++ b/desafios/index.html
@@ -50,7 +50,11 @@
         </ul>
 
         <h2> Nível intermediário</h2>
-        <p><b>Em construção</b></p>
+        <ul>
+            <li>
+                <a href="d12/index.html"><strong>EX12:</strong></a> Projeto Parallax.
+            </li>
+        </ul>
 
     </main>
     
