--- a/desafios/d12/index.html
+++ b/desafios/d12/index.html
@@ -89,7 +89,7 @@
     </section>
 
     <footer>
-        Site criado por <a href="https://github.io/Fabiano-Braga" target="_blank">Fabiano Braga</a> para <a href="cursoemvideo.com" target="_blank">CursoemVideo</a>.
+        Site criado por <a href="https://github.com/Fabiano-Braga" target="_blank">Fabiano Braga</a> para <a href="https://cursoemvideo.com" target="_blank">CursoemVideo</a>.
     </footer>
     
 </body>
