--- a/desafios/d13/home.html
+++ b/desafios/d13/home.html
@@ -17,6 +17,7 @@
             background-repeat: no-repeat;
             background-position: center top;
             background-size: cover;
+            background-attachment: fixed;
         }
     </style>
 </head>
