--- a/desafios/d13/index.html
+++ b/desafios/d13/index.html
@@ -16,7 +16,13 @@
             </iframe>
         </section>
         <section id="icon">
-            <img src="imagens/logo-instagram.jpg" alt="Icone Instagram" id="instagram" class="icons">
+          <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Logo home"></a><br>
+          <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="Logo Github"></a><br>
+          <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Logo Instagram"></a><br>
+          <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Logo Facebook"></a><br>
+          <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Logo Twitter"></a><br>
+          <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="Logo Youtube"></a>
+          
 
         </section>
     </main>
