Projeto em andamento

--- a/desafios/d13/linkdin.html
+++ b/desafios/d13/linkdin.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <img src="imagens/tela-facebook.jpg" alt="Facebook">
+    <img src="imagens/tela-linkdin.jpg" alt="Facebook">
     <a href="https://www.facebook.com">ACESSE</a>
     
 </body>
