--- a/desafios/index.html
+++ b/desafios/index.html
@@ -56,6 +56,12 @@
                 
             </li>
 
+            <ul>
+                <li>
+                    <a href="d13/index.html" target="_blank"><strong>EX13:</strong></a> Projeto Midias sociais.
+                </li>
+            </ul>
+
         
 
     </main>
