--- a/desafios/index.html
+++ b/desafios/index.html
@@ -57,7 +57,11 @@
             <li>
                 <a href="d13/index.html" target="_blank"><strong>EX13:</strong></a> Projeto Midias sociais.
             </li>
+            <li>
+                <a href="d14/index.html" target="_blank"><strong>EX14:</strong></a> Projeto tela de login.
+            </li>
         </ul>
+
 
         
 
