--- a/desafios/d14/index.html
+++ b/desafios/d14/index.html
@@ -12,7 +12,9 @@
 <body>
     <main>
         <section id="login">
-            <div id="imagem"></div>
+            <div id="imagem">
+                <!-- Imagem inserida por css -->
+            </div>
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
@@ -20,15 +22,16 @@
                 <form action="login.js" method="get">
                     <div class="campo" >
                         <i class="material-icons">person</i>
-                        <input type="email" name="login" id="ilogin" placeholder=" seu e-mail">
+                        <input type="email" name="login" id="ilogin" placeholder=" seu e-mail" required >
                     </div>
                     <div class="campo">
                         <i class="material-icons">vpn_key</i>
-                        <input type="password" name="senha" id="isenha" placeholder=" sua senha" id="password">
+                        <input type="password" name="senha" id="isenha" placeholder=" sua senha" required minlength="6" maxlength="15">
                     </div>
                     <div>
                         <input type="submit" value="Entrar" id="entrar">
                     </div>
+                    
                 </form>
             </div>
         </section>
