--- a/desafios/index.html
+++ b/desafios/index.html
@@ -58,7 +58,7 @@
                 <a href="d13/index.html" target="_blank"><strong>EX13:</strong></a> Projeto Midias sociais.
             </li>
             <li>
-                <a href="d14/index.html" target="_blank"><strong>EX14:</strong></a> Projeto tela de login. (EM CONSTRUÇÃO)
+                <a href="d14/index.html" target="_blank"><strong>EX14:</strong></a> Projeto tela de login.
             </li>
         </ul>
 
