--- a/desafios/index.html
+++ b/desafios/index.html
@@ -60,6 +60,9 @@
             <li>
                 <a href="d14/index.html" target="_blank"><strong>EX14:</strong></a> Projeto tela de login.
             </li>
+            <li>
+                <a href="d15/loading.html"><strong>EX15:</strong></a> Projeto animação de loading.
+            </li>
         </ul>
 
 
