--- a/desafios/d15/loading.html
+++ b/desafios/d15/loading.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <span class="ring">Loading...</span>
+        <span class="ring">loading...</span>
     </div>
 </body>
 </html>
