--- a/desafios/index.html
+++ b/desafios/index.html
@@ -63,6 +63,10 @@
             <li>
                 <a href="d15/loading.html"><strong>EX15:</strong></a> Projeto animação de loading.
             </li>
+
+            <li>
+                <a href="d16/landing-page.html"><strong>EX16:</strong></a> Landing Page. ( Em andamento. )
+            </li>
         </ul>
 
 
