--- a/desafios/d16/landing-page.html
+++ b/desafios/d16/landing-page.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="estilo/landing-page.css">
 </head>
 <body>
+
+    <aside class="menu">
+        <div class="main-content menu-content">
+            <h1><a href="#home">LOGO</a></h1>
+
+        <nav>
+            <ul>
+                <li><a href="#intro">Intro</a></li>
+                <li><a href="#grid-one">Grid-one</a></li>
+                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="#grid-two">grid-two</a></li>
+                <li><a href="#pricing">pricing</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        </div>
+    </aside>
     
 </body>
 </html>
