--- a/desafios/d16/landing-page.html
+++ b/desafios/d16/landing-page.html
@@ -25,6 +25,10 @@
         </nav>
         </div>
     </aside>
+
+    <section class="intro section main-bg">
+
+    </section>
     
 </body>
 </html>
