--- a/desafios/d16/landing-page.html
+++ b/desafios/d16/landing-page.html
@@ -15,12 +15,12 @@
 
         <nav>
             <ul>
-                <li><a href="#intro">Intro</a></li>
-                <li><a href="#grid-one">Grid-one</a></li>
-                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="#intro">intro</a></li>
+                <li><a href="#grid-one">grid-one</a></li>
+                <li><a href="#gallery">gallery</a></li>
                 <li><a href="#grid-two">grid-two</a></li>
                 <li><a href="#pricing">pricing</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact">contact</a></li>
             </ul>
         </nav>
         </div>
