--- a/desafios/d16/landing-page.html
+++ b/desafios/d16/landing-page.html
@@ -11,16 +11,15 @@
 
     <aside class="menu">
         <div class="main-content menu-content">
-            <h1><a href="#home">LOGO</a></h1>
+            <h1><a href="#home"><span>F</span>abiano <span>B</span>raga</a></h1>
 
         <nav>
             <ul>
-                <li><a href="#intro">intro</a></li>
-                <li><a href="#grid-one">grid-one</a></li>
-                <li><a href="#gallery">gallery</a></li>
-                <li><a href="#grid-two">grid-two</a></li>
-                <li><a href="#pricing">pricing</a></li>
-                <li><a href="#contact">contact</a></li>
+                <li><a href="#home">home</a></li>
+                <li><a href="#atividades">atividades</a></li>
+                <li><a href="#projetos">projetos</a></li>
+                <li><a href="#sobre">sobre mim</a></li>
+                <li><a href="#contato">contato</a></li>
             </ul>
         </nav>
         </div>
@@ -29,6 +28,8 @@
     <section class="intro section main-bg">
 
     </section>
+
+  
     
 </body>
 </html>
