estilizando menu e sessão home

--- a/desafios/d16/landing-page.html
+++ b/desafios/d16/landing-page.html
@@ -25,9 +25,15 @@
         </div>
     </aside>
 
-    <section class="intro section main-bg">
+   <section class="home">
 
-    </section>
+   </section>
+
+   <section class="white-bg">
+
+   </section>
+
+    
 
   
     
