--- a/desafios/d16/landing-page.html
+++ b/desafios/d16/landing-page.html
@@ -25,9 +25,18 @@
         </div>
     </aside>
 
-   <section class="home">
-
-   </section>
+    <section class="home">
+        <div class="container">
+            <div class="text-content">
+                <h1>Olá,</h1>
+                <h1>Meu Nome é</h1>
+                <h1><span>Fabiano Braga</span></h1>
+            </div>
+            <div class="btn-portfolio">
+                portfolio
+            </div>
+        </div>
+    </section>
 
    <section class="white-bg">
 
