--- a/desafios/d16/landing-page.html
+++ b/desafios/d16/landing-page.html
@@ -25,15 +25,15 @@
         </div>
     </aside>
 
-    <section class="home">
+    <section class="home" id="home">
         <div class="container">
             <div class="text-content">
                 <h1>Olá,</h1>
-                <h1>Meu Nome é</h1>
+                <h1>Meu nome é</h1>
                 <h1><span>Fabiano Braga</span></h1>
             </div>
             <div class="btn-portfolio">
-                portfolio
+                <a href="#">portfólio</a>
             </div>
         </div>
     </section>
