Ajustando o btn do portfólio

--- a/desafios/d16/landing-page.html
+++ b/desafios/d16/landing-page.html
@@ -32,13 +32,11 @@
                 <h1>Meu nome é</h1>
                 <h1><span>Fabiano Braga</span></h1>
             </div>
-            <div class="btn-portfolio">
-                <a href="#">portfólio</a>
-            </div>
+            <a href="#teste" class="btn-portfolio">portfólio</a>
         </div>
     </section>
 
-   <section class="white-bg">
+   <section class="white-bg" id="teste">
 
    </section>
 
