--- a/desafios/d16/landing-page.html
+++ b/desafios/d16/landing-page.html
@@ -30,7 +30,7 @@
             <div class="text-content">
                 <h1>Olá,</h1>
                 <h1>Meu nome é</h1>
-                <h1><span>Fabiano Braga</span></h1>
+                <h1>Fabiano Braga</h1>
             </div>
             <a href="#teste" class="btn-portfolio">portfólio</a>
         </div>
